# naina

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  vcpkg.json
.github/workflows/: ci.yml  deploy-demo.yml
benchmarks/: README.md  latency.py  runner.py
benchmarks/results/: m3-pro-default.json
bindings/node/: CMakeLists.txt  index.ts  package-lock.json  package.json  tsconfig.json
bindings/node/src/: binding.cc
bindings/node/test/: smoke.test.ts
bindings/python/: CMakeLists.txt
bindings/python/naina/: __init__.py
bindings/python/src/: module.cc
bindings/python/tests/: test_smoke.py
cmake/: FindNCNN.cmake  FindONNXRuntime.cmake  nainaConfig.cmake.in
core/: CMakeLists.txt
core/include/naina/: backend.hpp  model_loader.hpp  naina.h  naina.hpp  tensor.hpp
core/src/: api.cc  api_cpp.cc  backend_registry.cc  image_ops.cc  image_ops.hpp  model_loader.cc  sha256.cc  sha256.hpp  tensor.cc  version.cc
core/src/backends/: ncnn_backend.cc  onnxruntime_backend.cc
core/src/modules/: face_detect.cc  face_detect.hpp  face_embed.cc  face_embed.hpp  face_liveness.cc  face_liveness.hpp
core/tests/: CMakeLists.txt  test_backend_registry.cc  test_engine_lifecycle.cc  test_model_loader.cc  test_sha256.cc  test_tensor.cc  test_version.cc
demo/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/web/scripts/: fetch-models.sh
demo/web/src/: align.ts  detect.ts  embed.ts  engine.ts  gallery.ts  main.ts  nms.ts  styles.css  types.ts
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: README.md
examples/node/: face_verify.mjs
examples/python/: face_verify.py
models/: manifest.schema.json  registry.yaml
