[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "naina"
version = "0.1.0"
description = "Embeddable computer-vision runtime for face & person understanding"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "JAI", email = "jvoltci@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/jvoltci/naina"
Source = "https://github.com/jvoltci/naina"
Demo = "https://jvoltci.github.io/naina/"

[tool.scikit-build]
cmake.version = ">=3.24"
build.targets = ["naina-py"]
build-dir = "build/{wheel_tag}"
minimum-version = "build-system.requires"
wheel.packages = ["bindings/python/naina"]
wheel.install-dir = "naina"
editable.mode = "redirect"
editable.rebuild = true
# Pull yaml-cpp + libcurl from the system; the wheel just bundles libnaina + _binding.
sdist.include = [
    "core/**",
    "cmake/**",
    "bindings/python/**",
    "models/**",
    "CMakeLists.txt",
    "CMakePresets.json",
    "LICENSE",
    "README.md",
]
sdist.exclude = [
    "demo/",
    "docs/",
    "images/",
    "build/",
    "bindings/node/",       # Node binding lives in its own npm package
    "examples/",
    "benchmarks/results/",
    "**/__pycache__/",
    "**/.pytest_cache/",
    "**/node_modules/",
    "**/*.onnx",
    "**/.DS_Store",
]

[tool.scikit-build.cmake.define]
NAINA_BUILD_PYTHON = "ON"
NAINA_BUILD_TESTS = "OFF"
NAINA_BUILD_SHARED = "OFF"
